<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="?colorPrimary"
    android:layout_marginHorizontal="2dp"
    android:layout_marginVertical="3dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/id_number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/example_number"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textColor="?colorOnPrimary"
            app:layout_constraintEnd_toStartOf="@id/id_topic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/id_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_weight="10"
            />
        <TextView
            android:id="@+id/id_heading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dummytext"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="?colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/id_number"
            app:layout_constraintBottom_toTopOf="@id/id_topic"
            app:layout_constraintTop_toTopOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintHorizontal_weight="90"/>

        <TextView
            android:id="@+id/id_topic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dummytext"
            android:textColor="?colorOnPrimary"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/id_number"
            app:layout_constraintBottom_toTopOf="@id/id_date"
            app:layout_constraintTop_toBottomOf="@id/id_heading"
            android:ellipsize="end"
            app:layout_constraintHorizontal_weight="90"/>
        <TextView
            android:id="@+id/id_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_date"
            android:gravity="bottom"
            app:layout_constraintHorizontal_bias="0"
            android:layout_margin="10dp"
            android:textColor="?colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/id_topic"
            app:layout_constraintBottom_toBottomOf="parent"/>
        M<TextView
        android:id="@+id/id_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/id_date"
        app:layout_constraintBottom_toBottomOf="@id/id_date"
        app:layout_constraintTop_toTopOf="@id/id_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/type"
        android:textColor="?colorOnPrimary"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?colorOnSecondary"
        android:layout_gravity="bottom"/>


</androidx.cardview.widget.CardView>